--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_fortune_wheel: ^1.3.2
   confetti: ^0.8.0
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
